--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ nav {
     position: absolute;
     left: 0;
     width: 100%;
-    background: url("images/nav_background.png");
+    background: url("../images/nav_background.png");
 }
 
 nav ul {
@@ -75,7 +75,7 @@ nav ul li.subscribe a {
     margin-left: 22px;
     padding-left: 33px;
     text-align: left;
-    background: url("images/rss.png") left center no-repeat;
+    background: url("../images/rss.png") left center no-repeat;
 }
 
 
@@ -85,7 +85,7 @@ nav ul li.subscribe a {
     position: relative;
     margin-top: 66px;
     padding: 44px;
-    background: #467612 url("images/intro_background.png") repeat-x;
+    background: #467612 url("../images/intro_background.png") repeat-x;
     background-size: 100%;
     border-radius: 22px;
 }
@@ -132,7 +132,7 @@ nav ul li.subscribe a {
 aside {
     display: table-cell;
     width: 300px;
-    background: url("images/sidebar_background.png") top left;
+    background: url("../images/sidebar_background.png") top left;
 }
 
 
@@ -240,7 +240,7 @@ form input[type="submit"] {
 aside section {
     margin: 22px 0 0 22px;
     padding: 11px 22px;
-    background: url("images/sidebar_section_background.png") repeat-x;
+    background: url("../images/sidebar_section_background.png") repeat-x;
     border-radius: 11px;
 }
 
